syntax = 'proto3';
option java_multiple_files = true;
package dk.cosby.si.exam.driverscheduleapi;

message UpdateScheduleTeacherIdRequest {
  string scheduleId = 1;
  string teacherId = 2;
}

message  UpdateScheduleTeacherIdResponse {
  bool acknowledged = 1;
  bool success = 2;
  string errorMessage = 3;
}

service UpdateScheduleTeacherIdService {
  rpc UpdateScheduleTeacherId (UpdateScheduleTeacherIdRequest) returns (UpdateScheduleTeacherIdResponse);
}